# project-manager

./: .gitignore  AGENTS.md  COMMIT_MSG.txt  README.md  RULES.md  SIDEBAR_REDESIGN_PLAN.md  all-phases-plan.md  package.json  phase1-prompt.md  plan.md  pnpm-lock.yaml  sigma-redesign-plan.md  todo.md  turbo.json
.cargo/: config.toml
.github/workflows/: build.yml  release.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  share_server.rs
apps/desktop/src/components/: AppHeader.tsx  AppLayout.tsx  BackgroundSettings.tsx  DeleteConfirm.tsx  EmptyState.tsx  ErrorBoundary.tsx  ErrorsTab.tsx  NavSidebar.tsx  ProjectCard.tsx  ProjectDetail.tsx  ProjectDialog.tsx  SettingsDialog.tsx  ShareDialog.tsx  Sidebar.tsx  SkillsTab.tsx  SplitView.tsx  TabBar.tsx  Tabs.tsx  TimelineTab.tsx  TodosTab.tsx  WindowToolbar.tsx
apps/desktop/src/hooks/: useBackground.ts  useErrors.ts  useProjects.ts  useSharedItems.ts  useSkills.ts  useSplitView.ts  useTabs.ts  useTimeline.ts  useTodos.ts
apps/desktop/src/lib/: background.ts  launch.ts  overlay-patterns.ts
apps/desktop/src/styles/: globals.css
apps/landing/: package.json
apps/landing/app/: globals.css  layout.tsx  page.tsx
